syntax = "proto3";

package common;


message FetchedTrader {
    string traderId = 1;
    float totalRoi = 2;
    float totalPnl = 3;
    float winRate = 4;
    bool private = 5;
    float lastMonthPnl = 6;
    float lastMonthRoi = 7;
    float meanDealPnl = 8;
}

message FetchedTradersTransaction {
    repeated FetchedTrader fetchedTraders = 1;
}